02/08/09 - new apc-aa/export.php script, which allows to export the content 
(honzam)   of the slice to file. Currently is supported the CSV format 
           (through AA_Exporter_Csv class), but other formats could be added 
           easily (just by adding other AA_Exporter_* class). The parameters are
           "format", "slice_id" and optional "sort", "conds" and "filename"
02/04/09 - fixed "Missing argument 2 for AA_Widget_Chb::getLiveHtml" error
(honzam)
01/15/09 - _msg_banned..... could contain aliases from IP Banning slice, so you
(honzam)   can display banned message specific for each user
         - DiscussionMailList field used as one way, how to specify, where
           should be e-mailed the discussion comment now could contain more than
           one email - separated by comma - just like:
             t48:info@example.org,actionapps@ecn.cz
         - cleanup - removed old, unused tables from database including the old
           serving code for them
         - validation updated - the http:// string is considered as empty url
         - fixed offline.php3 so it could be used with new PHP version (5.2.8)
12/22/08 - new possibility to bann some IP addresses from posting comments to
(honzam)   discussion. If you want to use bann IP list in your slice, you should
           create new slice, which will contain at least the "ip.............."
           field. Then you should add the "slice field" "_ip_banned......" in
           you slice with discusion, and fill the field with the slice_id of
           bann slice. You could also fill the "_msg_banned....." "slice field"
           where you fill the message, which apears to banned user after commit
           the comment (there is similar field "_msg_spam......." for spammers
           as well)
         - new "_msg_spam......." "slice field" which allows you to configure
           the message displayed to user, when (s)he submits spam-like comment